Feat: Created HTTP methods for update and delete users
