# src/main/resources/api-first/openapi.yaml
@@ -10,6 +10,48 @@ tags:
 servers:
   - url: "/"
 paths:
+  "/delete_user/{id}":
+    delete:
+      operationId: deleteUser
+      summary: Delete a user by id.
+      tags:
+        - User
+      parameters:
+        - $ref: '#/components/parameters/UserId'
+      responses:
+        '204':
+          description: No content.
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+  "/update_user":
+    put:
+      operationId: updateUser
+      summary: Update a user by id.
+      tags:
+        - User
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: The updated user data.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
   "/search_users":
     post:
       operationId: getUsers
@@ -278,6 +320,14 @@ components:
         minimum: 1
         maximum: 100
         default: 10
+    UserId:
+      name: id
+      in: path
+      description: The id of the user.
+      required: true
+      schema:
+        type: integer
+      example: 1
     BookId:
       name: id
       in: path
